<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/SearchCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/SearchBar"
            layout="@layout/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Products"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/result_entry">

        </androidx.recyclerview.widget.RecyclerView>

        <ProgressBar
            android:id="@+id/Progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center" />
    </FrameLayout>

</LinearLayout>