...
    <TextView
        android:id="@+id/Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/Favorite"
        app:layout_constraintStart_toEndOf="@+id/Thumbnail"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Favorite"
        android:layout_width="wrap_content"
...
